--- a/Enlaces/style.css
+++ b/Enlaces/style.css
@@ -3,13 +3,6 @@ body {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.menu {
-    padding: 0 10px 30px 10px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
-    grid-gap: 20px 40px
-}
-
 .heading {
     background: linear-gradient(rgb(92, 5, 5), #e84343);
     color: #fff;
@@ -51,59 +44,30 @@ body {
     text-transform: uppercase;
 }
 
-.food-items {
-    display: grid;
-    position: relative;
-    grid-template-rows: auto 1fr;
-    border-radius: 15px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
-    transition: .2s ease-in-out
-}
-
-.food-items img {
-    position: relative;
-    width: 100%;
-    height: 280px;
-    border-radius: 15px 15px 0 0;
-    cursor: pointer;
-}
-
-h1 {
-    grid-column: 1/-1;
+.menu {
+    background-position: center;
+    background-attachment: fixed;
     text-align: center;
+    font-family: cursive;
+    padding: 50px;
+    box-sizing: border-box;
+    background-color:  rgba(92, 5, 5, 0.877);
+	box-shadow: 0 0 4px 4px rgba(0,0,0,0.2);
+    border-radius: 15px;
+    color: #c7c7c7;
 }
 
-.details {
-    padding: 20px 10px;
-    display: grid;
-    grid-template-rows: auto 1fr 50px;
-    grid-row-gap: 15px;
-}
-
-.details-sub h5 {
-    font-weight: 600;
-    font-size: 18px;
-}
-
-.price {
-    text-align: right;
-}
-
-.details p {
-    color: #6f6f6f;
-    font-size: 15px;
-    line-height: 28px;
-    font-weight: 400;
-    align-self: stretch;
-}
-
-.details button {
-    background: #e84343;
-    border: none;
+.menu h2{
     color: #fff;
-    font-size: 16px;
-    font-weight: 600;
-    border-radius: 5px;
-    width: 180px;
-    cursor: pointer;
+}
+
+table {
+    display: inline-block;
+}
+
+img {
+    height: 200px;
+    width: 225px;
+    border: inset rgb(92, 5, 5);
+    border-radius: 45px;
 }
